[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pipe.gd" type="Script" id=1]
[ext_resource path="res://Resources/Pipe.tres" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1
light_mode = 1

[node name="Pipe" type="Area2D" groups=["Objective", "Welds"]]
position = Vector2( 362, 610 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 1, 0, 0, 1 )
texture = ExtResource( 2 )
polygon = PoolVector2Array( 0, -10, 10, -10, 10, 10, -10, 10, -10, 0, 5, 5 )

[node name="Label" type="Label" parent="."]
material = SubResource( 5 )
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="Particles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 15
randomness = 0.5
direction = Vector2( 0, 1 )
spread = 135.0
gravity = Vector2( 0, 9.8 )
initial_velocity = 50.0
initial_velocity_random = 0.5
angular_velocity = 180.0
angular_velocity_random = 1.0
damping = 10.0
scale_amount = 3.0
color = Color( 0.996078, 0.815686, 0.427451, 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Pipe_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Pipe_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
